--- a/src/ui.css
+++ b/src/ui.css
@@ -1,6 +1,35 @@
+.hide {
+    display: none;
+}
+
+.showBlocklyUi {
+    display: on;
+    width: 90%;
+    height: 90%;
+    margin: 0;
+    padding: 0;
+    background-color: #ffffff;
+    color: #666666;
+    position:fixed;
+    top: 5%;
+    left: 5%;
+    z-index: 101;
+}
+
+.mordalBackground {
+    display:on;
+    width:100%;
+    height:100%;
+    background-color: rgba(0,0,0,0.5);
+    position:fixed;
+    top:0;
+    left:0;
+    z-index: 100;
+}
+
 .blocklyDiv {
-    width: 800px;
-    height: 600px;
+    width: 100%;
+    height: 90%;
     margin: 0;
     padding: 0;
 }
