Revert "不要になったCSSを削除"
This reverts commit 9d88ebc3b24dc25361a3a58833e2bb25c42900e3.

--- a/src/BlocklyUi.css
+++ b/src/BlocklyUi.css
@@ -1,3 +1,53 @@
+.showBlocklyUi {
+    display: on;
+    width: 90%;
+    height: 90%;
+    margin: 0;
+    padding: 0;
+    background-color: #ffffff;
+    color: #666666;
+    position:fixed;
+    top: 5%;
+    left: 5%;
+    z-index: 101;
+}
+
+.hideBlocklyUi {
+    display: on;
+    width: 90%;
+    height: 90%;
+    margin: 0;
+    padding: 0;
+    background-color: #ffffff;
+    color: #666666;
+    position:fixed;
+    top: 100%;
+    left: 100%;
+    z-index: 101;
+}
+
+.showMordalBackground {
+    display:on;
+    width:100%;
+    height:100%;
+    background-color: rgba(0,0,0,0.5);
+    position:fixed;
+    top:0;
+    left:0;
+    z-index: 100;
+}
+
+.hideMordalBackground {
+    display:on;
+    width:100%;
+    height:100%;
+    background-color: rgba(0,0,0,0.5);
+    position:fixed;
+    top:100%;
+    left:100%;
+    z-index: 100;
+}
+
 .blocklyDiv {
     width: 95vw;
     height: 95vh;
