--- a/src/App.css
+++ b/src/App.css
@@ -1,41 +1,41 @@
 .showBlocklyUi {
-    display: flex;
-    flex-direction: column;
-    width: 95vw;
-    height: 95vh;
-    top: 2.5vh;
-    left: 2.5vw;
-    background-color: #ffffff;
-    color: #666666;
-    position:fixed;
-    z-index: 101;
+  display: flex;
+  flex-direction: column;
+  width: 95vw;
+  height: 95vh;
+  top: 2.5vh;
+  left: 2.5vw;
+  background-color: #ffffff;
+  color: #666666;
+  position: fixed;
+  z-index: 101;
 }
 
 /* blockly のレイアウトが崩れるので display:none にはせず、画面外に追い出す。 */
 .hideBlocklyUi {
-    display: flex;
-    flex-direction: column;
-    width: 95vw;
-    height: 95vh;
-    top: 100vh;
-    left: 100vw;
-    background-color: #ffffff;
-    color: #666666;
-    position:fixed;
-    z-index: 101;
+  display: flex;
+  flex-direction: column;
+  width: 95vw;
+  height: 95vh;
+  top: 100vh;
+  left: 100vw;
+  background-color: #ffffff;
+  color: #666666;
+  position: fixed;
+  z-index: 101;
 }
 
 .showMordalBackground {
-    display:on;
-    width:100%;
-    height:100%;
-    background-color: rgba(0,0,0,0.5);
-    position:fixed;
-    top:0;
-    left:0;
-    z-index: 100;
+  display: on;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
 }
 
 .hideMordalBackground {
-    display:none;
+  display: none;
 }
